chaching images
zmiany cache'a na images